data/derived/comb/progs/unify/prog4074.ml.out
Characters 13-48:
  let _ = eval (AddThree(VarX,VarY,VarX),1.,2.,3.);;
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b * 'c * 'd
       but an expression was expected of type expr * float * float
